test/compile_errors/syntax_error_beginning.ivy
#lang ivy1.7
type nat
}




